# Model_sxy

./: .gitignore  README.md
complex_matrix/: .gitignore  CMakeLists.txt
complex_matrix/src/: cmatrix.cpp  cmatrix.h  integral.cpp  integral.h  integral_complex.c  main.cpp
gto_integral/: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
gto_integral/src/: integral.hpp  main.cpp
idmrg/: 1d_heisenberg_model.py  README.md  itensor.jl  mps.py
idmrg/dmrg/: .clangd  CMakeLists.txt  main.cpp
idmrg/dmrg/src/: dmrg.hpp  mpo.hpp  mps.hpp  operators.hpp  toolkit.hpp
knowles_handy/: .gitignore  CMakeLists.txt  main.cpp  sparse_matrix.txt
knowles_handy/example/h4_fci/: dets-h4.txt
knowles_handy/example/kylin_input/: n2.inp  n2.xyz
knowles_handy/example/n2_fci/: fcidump.example1
knowles_handy/scripts/: creat_fcidump_kylin.inp
knowles_handy/src/ci/: kh.hpp
knowles_handy/src/integral/: integral.hpp
knowles_handy/src/linalg/: davidson.hpp  matrix.hpp  sparse_matrix.hpp
matrix/: .gitignore  CMakeLists.txt  main.cpp
matrix/share/basis/: def2-qzvp-c.g94  def2-qzvp-j.g94  def2-qzvp-jk.g94  def2-qzvp.g94  def2-qzvpd.g94  def2-qzvpp-c.g94  def2-qzvpp-j.g94  def2-qzvpp-jk.g94  def2-qzvpp.g94  def2-qzvppd-c.g94  def2-qzvppd.g94  def2-sv(p)-c.g94  def2-sv(p)-j.g94  def2-sv(p)-jk.g94  def2-sv(p).g94  def2-sv.g94  def2-svp-c.g94  def2-svp-j.g94  def2-svp-jk.g94  def2-svp.g94  def2-svpd-c.g94  def2-svpd.g94  def2-tzvp-c.g94  def2-tzvp-j.g94  def2-tzvp-jk.g94  def2-tzvp.g94  def2-tzvpd-c.g94  def2-tzvpd.g94  def2-tzvpp-c.g94  def2-tzvpp-j.g94  def2-tzvpp-jk.g94  def2-tzvpp.g94  def2-tzvppd-c.g94  def2-tzvppd.g94
matrix/src/gto/: gto.cpp  gto.h
matrix/src/linalg/: matrix.hpp
slater_condon/: .clang-format  .gitignore  CMakeKits.json  CMakeLists.txt  README.md  main.cpp
slater_condon/example/c2_cas88/: FCIDUMP  electron_configurations.txt
slater_condon/example/h4_fci/: H-h4.txt  fcidump-h4
slater_condon/example/kylin_input/: FCIDUMP
slater_condon/example/n2_cas66/: electron_configurations.txt  fcidump.example1
slater_condon/example/n2_fci/: electron_configurations.txt
slater_condon/scripts/: creat_fcidump_pyscf.py  create_config.py  fcidump.example1
slater_condon/src/ci/: sc.hpp
slater_condon/src/integral/: integral.hpp
slater_condon/src/linalg/: davidson.hpp  matrix.hpp  sparse_matrix.hpp
teach_rhf/: .gitignore  README.md  build.py  dhf.py  ghf.py  rhf.py  rhf_full_sxy.py  uhf.py
tower/: .gitignore  CMakeLists.txt  main.cpp
tower/example/: test.py  x2camf.py
tower/pybind11/: pybind11_eigen.cpp
tower/src/: matrix.hpp
tower/src/integral/: integral.hpp  integral_complex.c
tower/src/linalg/: einsum.hpp  matrix.hpp
tower/src/pybind11/: pybind11.cpp  pybind11_eigen.cpp  pybind11_integral.cpp  pybind11_x2camf.cpp
tower/src/x2camf/: atom_hf.hpp
toy_fssh/: README.md  tully.py
toy_fssh/fssh/: .gitignore  CMakeLists.txt  main.cpp
